text over image

--- a/index.html
+++ b/index.html
@@ -25,21 +25,31 @@
   <!-- All JavaScript at the bottom, except this Modernizr build.
        Modernizr enables HTML5 elements & feature detects for optimal performance.
        Create your own custom Modernizr build: www.modernizr.com/download/ -->
-  <script src="js/libs/modernizr-2.5.3.min.js"></script>
+  <script src="js/modernizr.js"></script>
+  <script src="js/prefixfree.min.js"></script>
   <title>Limbdel's Candel holders from the forest</title>
 </head>
 <body>
-	<img class='transparent' src="del.png">
   <!-- Prompt IE 6 users to install Chrome Frame. Remove this if you support IE 6.
        chromium.org/developers/how-tos/chrome-frame-getting-started -->
   <!--[if lt IE 7]><p class=chromeframe>Your browser is <em>ancient!</em> <a href="http://browsehappy.com/">Upgrade to a different browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to experience this site.</p><![endif]-->
+<div id="main">
+		<img src = 'img/del.png'> 
+		<div id="content">
   <header>
 	  <h1>Limbdel's</h1>
   </header>
-  <div id="main">
-		<p></p>
-  </div>
-	<footer>
+			 	<ul>
+					<li> 	Natural</li>
+					<li> 	Artisnal</li>
+					<li> 	Rustic</li>
+					<li>	Aruvedic</li>
+					<li>	Organic</li>
+					<li> 	Recycled </li>
+				</ul></li>
+
+      </div>
+		<footer>
 	    <div id="left">
 	    	<h3>Hayley Claypool<h3>
 	    	<h4>(444)333-1234</h4>
@@ -57,7 +67,11 @@
 			</div>
 	</footer>
 
-  <!-- JavaScript at the bottom for fast page loading -->
+  		
+			
+			</div>
+		</div>
+<!-- JavaScript at the bottom for fast page loading -->
 
   <!-- Grab Google CDN's jQuery, with a protocol relative URL; fall back to local if offline -->
 	<!--  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script> -->
@@ -69,6 +83,5 @@
 	<!-- <script src="js/script.js"></script> -->
   <!-- end scripts -->
 
-	<script type="text/javascript" src="fixie.js"></script>
 </body>
 </html>
